Adding a Quadtree struct

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="Debug.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Events.h" />
+    <ClInclude Include="glad\glad.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Mesh.h" />
