--- a/QuadTreeOGL/QuadTreeOGL.vcxproj.filters
+++ b/QuadTreeOGL/QuadTreeOGL.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="QuadTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BoundingShapes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RayCast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="QuadTreeOgl.h">
@@ -32,13 +38,14 @@
     <ClInclude Include="QuadTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Shaders\PrimitivesMaterial.fs">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="Shaders\PrimitivesMaterial.vs">
-      <Filter>Resource Files</Filter>
-    </None>
+    <ClInclude Include="BoundingShapes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Macros.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RayCast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
