--- a/QuadTreeOGL/QuadTreeOGL.vcxproj
+++ b/QuadTreeOGL/QuadTreeOGL.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BoundingShapes.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OctreeOGL.cpp" />
     <ClCompile Include="QuadTree.cpp" />
@@ -149,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundingShapes.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="QuadTreeOgl.h" />
