--- a/QuadTreeOGL/QuadTreeOGL.vcxproj
+++ b/QuadTreeOGL/QuadTreeOGL.vcxproj
@@ -118,8 +118,10 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;Engine.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -141,16 +143,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BoundingShapes.cpp" />
-    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OctreeOGL.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="RayCast.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BoundingShapes.h" />
-    <ClInclude Include="Collision.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="QuadTreeOgl.h" />
